[package]
name = "liquidtempd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "3.1.15", features = ["derive"] }
csscolorparser = { version = "0.5", features = ["serde"] }
ctrlc = "3.2"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
xdg = "2.4"
